examples/test/testpolicy143.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy143
  namespace: namespace179
spec:
  podSelector:
    matchLabels:
      key37: value41
      key5: value41
      key23: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value28
      podSelector:
        matchLabels:
          key4: value26
